- add footer with contact information

--- a/src/main/webapp/VAADIN/themes/clarin/styles.css
+++ b/src/main/webapp/VAADIN/themes/clarin/styles.css
@@ -20,6 +20,10 @@
 	background-position: top right;
 }
 
+.footer div {
+    text-align: center;	
+}
+
 .small-margin {
 	padding: 4px !important;
 }
